Fix overflow for inner sidebar in user management

--- a/packages/studiocms/src/styles/dashboard-base.css
+++ b/packages/studiocms/src/styles/dashboard-base.css
@@ -578,3 +578,7 @@ main {
 #search-form {
 	width: 100%;
 }
+
+#sui-sidebar-inner > div:has(> .inner-sidebar-container) {
+	height: 100%;
+}
